example/multinode/etcd-peer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etcd-statefulset
    instance: etcd-test
    name: etcd
    role: test
  name: etcd-test-peer
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: peer
      port: 2380
      protocol: TCP
      targetPort: 2380
  publishNotReadyAddresses: true
  selector:
    instance: etcd-test
    name: etcd
  sessionAffinity: None
  type: ClusterIP
