example/multinode/etcd-peer-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-etcd-peer
spec:
  egress:
    - ports:
        - port: 2379
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 2380
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: etcd-statefulset
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: etcd-statefulset
      ports:
        - port: 2379
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 2380
          protocol: TCP
  podSelector:
    matchLabels:
      app: etcd-statefulset
  policyTypes:
    - Ingress
    - Egress
